--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="h1">
-        <h1>开始蹦迪</h1>
+        <h1>咋俩各论各的 我管你叫哥 你管我叫爸</h1>
     </div>
     <script>
         document.querySelector('.h1').onclick = function () {
