--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="h1">
-        <h1>咋俩各论各的 我是点点爸 你是点点妈</h1>
+        <h1>咋俩各论各的 我是你爸爸</h1>
     </div>
     <script>
         document.querySelector('.h1').onclick = function () {
